🚀 Production Ready v1.0 - Complete Implementation
✨ Major Features:
- Implemented Prometheus Light v1.0 (pattern-based + RAG architecture)
- Complete fine-tuning pipeline with Google Colab notebook
- RAG system with 811 expert prompt engineering guidelines
- Multi-model support (ChatGPT, Claude, Gemini)
- Copy/export features (individual, bulk, TXT, JSON)
- Character counter with 2000-char limit
- Dark/light theme toggle
- API health monitoring

🧠 Model & Training:
- Fine-tuned LoRA adapter (1,000 training examples)
- Trained on Mistral-7B-Instruct-v0.1
- 8-bit quantization for efficiency
- LoRA rank: 16, alpha: 32
- Lightweight inference model for low-resource environments
- Model files excluded (161MB) - download instructions provided

📚 RAG Pipeline:
- ChromaDB vector store with 811 guidelines
- Sentence-transformers embeddings (all-MiniLM-L6-v2)
- Model-specific retrieval filtering
- Top-k configurable retrieval (default: 5)

🎨 Frontend:
- React 18 + Vite
- Modern UI with responsive design
- Individual copy buttons per result
- Bulk copy all prompts
- Export as formatted TXT
- Export as structured JSON
- Real-time character counter with warnings
- Dark/light theme with smooth transitions

⚙️ Backend:
- FastAPI with async support
- /augment endpoint for prompt enhancement
- /health endpoint with system status
- CORS enabled for frontend
- Comprehensive error handling
- Structured logging

🐳 Docker & Deployment:
- Production-ready docker-compose.yml
- Optimized Dockerfiles with multi-stage builds
- Health checks for reliability
- Volume persistence for ChromaDB
- Network isolation
- .dockerignore for faster builds
- Complete DOCKER.md deployment guide

📖 Documentation:
- Updated main README.md (production status)
- Comprehensive backend/README.md (450+ lines)
- Comprehensive frontend/README.md (250+ lines)
- Complete DOCKER.md deployment guide
- Updated Timeline.md (all phases complete)
- Updated Progress Log.md with completion summary
- Model download instruction

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,16 @@ __pycache__
 *.pyc
 .DS_Store
 /.github
+# Large model files (download separately or retrain)
+backend/app/model/prometheus_lora_adapter/*.safetensors
+backend/app/model/prometheus_lora_adapter/tokenizer.model
+
+# Log files
+*.log
+
+# Temporary files
+backend/=0.44.1
+
+# ChromaDB binary files (can be regenerated)
+backend/services/ingest/chroma_db/
+services/ingest/chroma_db/
