chore: Standardize codebase with Ruff, Mypy, and CI/CD
- Migrated linting and formatting to Ruff for improved performance and unified tooling.
- Added static type checking with Mypy and fixed type errors.
- Configured GitHub Actions CI pipeline for backend (lint, type-check, test) and frontend (lint, build).
- Fixed syntax errors in f-strings for Python < 3.12 compatibility.
- Improved error handling and exception chaining in backend.
- Updated project configuration (pyproject.toml, Makefile) to support new standards.
- Cleaned up .gitignore and removed tracked database files.

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 __pycache__
 *.pyc
 .DS_Store
-/.github
+# /.github  <-- We want to track github workflows
 # Large model files (download separately or retrain)
 backend/app/model/prometheus_lora_adapter/*.safetensors
 backend/app/model/prometheus_lora_adapter/tokenizer.model
@@ -18,3 +18,12 @@ backend/=0.44.1
 # ChromaDB binary files (can be regenerated)
 backend/services/ingest/chroma_db/
 services/ingest/chroma_db/
+*.sqlite3
+
+# Test artifacts
+.pytest_cache/
+.mypy_cache/
+.ruff_cache/
+.coverage
+htmlcov/
+
